--- a/index.html
+++ b/index.html
@@ -456,67 +456,11 @@
             </div>
 
             <!-- Document Preview Card -->
-            <div class="doc-preview-card">
-                <div class="doc-preview-header">
-                    <div class="doc-mygov-small">
-                        <div class="folder-icon">
-                            <div class="check-badge">
-                                <svg viewBox="0 0 24 24">
-                                    <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- O'zbekiston Gerbi -->
-                    <svg class="doc-gerb-small" viewBox="0 0 100 100">
-                        <!-- Background circle -->
-                        <circle cx="50" cy="50" r="48" fill="#fff" stroke="#1565C0" stroke-width="1" />
-
-                        <!-- Outer decorative ring -->
-                        <circle cx="50" cy="50" r="45" fill="none" stroke="#FFC107" stroke-width="3" />
-
-                        <!-- Inner content area -->
-                        <circle cx="50" cy="50" r="38" fill="#E3F2FD" />
-
-                        <!-- Bird (Humo) simplified -->
-                        <path
-                            d="M50 25 C55 20, 65 22, 70 30 C73 35, 72 42, 68 48 L50 45 L32 48 C28 42, 27 35, 30 30 C35 22, 45 20, 50 25"
-                            fill="#1E88E5" opacity="0.8" />
-
-                        <!-- Sun symbol -->
-                        <circle cx="50" cy="55" r="12" fill="#FFC107" />
-                        <circle cx="50" cy="55" r="8" fill="#FFD54F" />
-
-                        <!-- Sun rays -->
-                        <g stroke="#FFC107" stroke-width="2">
-                            <line x1="50" y1="40" x2="50" y2="35" />
-                            <line x1="62" y1="47" x2="66" y2="43" />
-                            <line x1="65" y1="55" x2="70" y2="55" />
-                            <line x1="62" y1="63" x2="66" y2="67" />
-                            <line x1="50" y1="70" x2="50" y2="75" />
-                            <line x1="38" y1="63" x2="34" y2="67" />
-                            <line x1="35" y1="55" x2="30" y2="55" />
-                            <line x1="38" y1="47" x2="34" y2="43" />
-                        </g>
-
-                        <!-- Cotton and wheat decorations (simplified) -->
-                        <path d="M20 70 Q25 50, 30 65 Q35 55, 38 70" stroke="#4CAF50" stroke-width="2" fill="none" />
-                        <path d="M80 70 Q75 50, 70 65 Q65 55, 62 70" stroke="#4CAF50" stroke-width="2" fill="none" />
-
-                        <!-- Small cotton bolls -->
-                        <circle cx="22" cy="68" r="4" fill="white" stroke="#9E9E9E" />
-                        <circle cx="78" cy="68" r="4" fill="white" stroke="#9E9E9E" />
-
-                        <!-- Star -->
-                        <polygon points="50,15 52,21 58,21 53,25 55,31 50,27 45,31 47,25 42,21 48,21" fill="#FFC107" />
-                    </svg>
-                </div>
-
+            <div class="doc-preview-card" style="padding: 16px;">
                 <!-- Document Preview Image -->
-                <div style="text-align: center; padding: 20px 0;">
+                <div style="text-align: center;">
                     <img src="image copy 5.png" alt="Document Preview"
-                        style="max-width: 100%; height: auto; border-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        style="max-width: 180px; height: auto; border-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
                 </div>
             </div>
         </div>
