--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 
             // Download the existing PDF file (rasm.pdf) as file.pdf
             const link = document.createElement('a');
-            link.href = 'rasm.pdf';
+            link.href = 'file.pdf';
             link.download = 'file.pdf';
             document.body.appendChild(link);
             link.click();
